Bug 158105 - [UI] Character background or Character Highlighting Color
Summary: [UI] Character background or Character Highlighting Color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.8.2 release
Hardware: All Windows (All)
: medium normal
Assignee: BogdanB
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Find&Replace-Dialog
  Show dependency treegraph
 
Reported: 2023-11-07 20:05 UTC by LeroyG
Modified: 2025-07-03 13:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description LeroyG 2023-11-07 20:05:00 UTC
Description:
In the Find and Replace dialog, the Attributes button open a check list.
Instead of "Character background" the fourth item must be "Character Highlighting Color".

Steps to Reproduce:
As in Description.

Actual Results:
Character background

Expected Results:
Character Highlighting Color


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.8.2 (X86_64) / LibreOffice Community
Build ID: f718d63693263970429a68f568db6046aaa9df01
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-MX (es_ES); UI: en-US
Calc: CL threaded
Comment 1 Buovjaga 2023-11-13 17:07:24 UTC
Ok, so this is about outdated terminology. I did a search in the source:

$ git grep 'Character background'
include/svx/strings.hrc:#define RID_SVXITEMS_BRUSH_CHAR                             NC_("RID_SVXITEMS_BRUSH_CHAR", "Character background")
include/svx/svxitems.hrc:    { NC_("RID_ATTR_NAMES", "Character background")    ,   SID_ATTR_BRUSH_CHAR },
Comment 2 BogdanB 2023-11-29 20:00:04 UTC
https://gerrit.libreoffice.org/c/core/+/160037

Changes are in Gerrit now, but I am not sure about capitalization. Also, I found another occurrence in comments. I need review on this commit.
Comment 3 LeroyG 2023-11-30 20:54:23 UTC
(In reply to BogdanB from comment #2)
> I am not sure about capitalization.

Following other attributes capitalization: "Character highlighting color".

Formatting toolbar button tooltip has capitalization in every word. Also the function name in Tools - Customize.
Comment 4 Heiko Tietze 2023-12-04 15:28:53 UTC
About caPTIAlization (caps lock *g*) see https://wiki.documentfoundation.org/Design/Guidelines/UIWriting
Comment 5 Commit Notification 2023-12-20 08:34:11 UTC
Bogdan B committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c535425adae84ab5e841e0b04584481e0874edf

tdf#158105 Change character "background" to "highlighting color"

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-12-20 09:15:26 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/1ba5e041e6e4e259a69160b90afed882c8c0f664

tdf#158105 Change character "background" to "highlighting color"