tdf#158105 Change character "background" to "highlighting color"

Change-Id: I98dcc9cf0d2e3306275a25ed83dc5692211ed442
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160037
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Hossein <hossein@libreoffice.org>